--- a/CSS/loginstyle.css
+++ b/CSS/loginstyle.css
@@ -1,7 +1,7 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-image: url(images/back6.jpg);
+  background-image: url(/images/back6.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   
