--- a/CSS/loginstyle.css
+++ b/CSS/loginstyle.css
@@ -1,10 +1,10 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-/*   background-image: URL(images/back6.jpg); */
+  background-image: URL(images/back6.jpg);
   background-colour:coral;
-/*   background-repeat: no-repeat;
-  background-size: cover;   */
+  background-repeat: no-repeat;
+  background-size: cover;  
 }
 
 /* Container needed to position the button. Adjust the width as needed */
